<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:paddingRight="10dp"
        android:text="@string/back" />

    <Button
        android:id="@+id/print_button"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_toLeftOf="@id/back_button"
        android:paddingRight="10dp"
        android:text="@string/print" />

    <Button
        android:id="@+id/stop_button"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_toLeftOf="@id/print_button"
        android:paddingRight="10dp"
        android:text="@string/stop" />
    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_toLeftOf="@id/stop_button"
        android:paddingRight="10dp"
        android:text="@string/start" />

</RelativeLayout>