<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/update_item_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/update_item" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:paddingRight="10dp"
            android:text="@string/delete" />

        <Button
            android:id="@+id/blank_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@id/delete_button"
            android:paddingRight="10dp"
            android:text="@string/blank" />

        <Button
            android:id="@+id/sepecimen_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingRight="10dp"
            android:layout_toLeftOf="@id/blank_button"
            android:text="@string/sepecimen" />
    </RelativeLayout>

</LinearLayout>