<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="40dp"
        android:layout_weight="2"
        android:orientation="vertical" >

        <Button
            android:id="@+id/light_absorptance_testing_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/light_absorptance_testing"
            android:onClick="startAbsorptanceTesting" />

        <Button
            android:id="@+id/standard_testing_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/standard_testing" 
            android:onClick="startStandardTesting"/>

        <Button
            android:id="@+id/param_setting_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/para_setting" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3" >

        <Button
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="60dp"
            android:text="@string/back"/>
    </RelativeLayout>

</LinearLayout>