<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:text="@string/sys_setting"/>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/date"/>
    
    <DatePicker android:id="@+id/dp1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/time"/>
    
    <TimePicker android:id="@+id/tp1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>